# Second_Brain

./: .gitignore  README.md  adk_config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ADK_GUIDE.md
infra/api/: Dockerfile
scripts/: run_d.sh
src/agents/: embedding_agent.py  ingest_agent.py  linking_agent.py  rag_agent.py  retriever_agent.py  root_agent.py
src/api/: app.py
src/api/routes/: ingest.py  query.py
src/tools/: kg_tool.py  vector_tool.py
src/ui/: streamlit_app.py
src/utils/: file_parsers.py  metadata.py
tests/: test_ingest.py
