[project]
name = "second-brain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "fastapi>=0.122.0",
    "google-adk>=1.18.0",
    "mypy>=1.18.2",
    "neo4j>=6.0.3",
    "pdfplumber>=0.11.8",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "weaviate-client>=4.18.1",
]